tests/solidity/bad/propaliased.sol
// SPDX-License-Identifier: MIT
pragma solidity ^0.8.0;

contract Test {
    function echidna_test() public view {}
}
